# PortkeyDrop

./: .gitguardian.yaml  .gitguardian.yml  .gitignore  .tmp_pr_body.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  cliff.toml  progress-d17d6391-cbc7-46b6-a7ed-74275fb33f6e.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer-fast.md  implementer-opus.md  planner.md  reviewer.md
.claude/hooks/: worktree-create.sh  worktree-remove.sh
.github/scripts/: push_releases.py
.github/workflows/: build.yml  ci.yml  push-releases.yml  update-pages.yml  update-wordpress.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: index.template.html  wordpress-release-page.md
installer/: build.py  portkeydrop.iss  portkeydrop.spec
installer/hooks/: hook-asyncssh.py
scripts/: bootstrap-worktree.sh  build_pages.py  generate_build_meta.py  verify_portable_zip.py
tests/: _wx_stub.py  test_accessible_list.py  test_activity_log.py  test_app.py  test_app_migration_startup.py  test_dialogs_a11y.py  test_host_key_dialog.py  test_host_key_policy.py  test_host_key_verification.py  test_import_connections_dialog.py  test_importers_coverage.py  test_importers_cyberduck.py  test_importers_filezilla.py  test_importers_init.py  test_importers_winscp.py  test_local_files.py  test_migration.py  test_migration_dialog.py  test_password_backend.py  test_paste_local.py  test_portable.py  test_ppk_utils.py  test_properties_dialog_a11y.py  test_protocols.py  test_queue_during_transfer.py  test_quick_connect_dialog.py  test_resume_download.py  test_retry_failed_transfers.py  test_screen_reader.py  test_settings.py  test_settings_dialog_a11y.py  test_settings_qt.py  test_sftp_client.py  test_site_manager_dialog.py  test_sites.py  test_ssh_agent_auth.py  test_ssh_utils.py  test_transfer_dialog.py  test_transfer_dialog_refresh.py  test_transfer_persist.py  (+8 more)
(+53 files in other folders)
